# fandango-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  config.example.yaml  docker-compose.dev.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements.txt  worker-config.yaml  wrangler.toml
docs/: DOCKER_DEV.md  FIRST_RUN.md  VPS_COLOCATION_HANDOFF.md  VPS_DEPLOY.md  VPS_DEPLOY_PLAN.md  docker_implementation.md  fandango_api_direct_spec.md  fandango_api_manifest.yaml  fandango_api_reverse_engineering.md
scripts/: bootstrap.ps1  bootstrap.sh  cloudflare-publish-fandango.sh  deploy-worker.ps1  deploy-worker.sh  docker-common.ps1  docker-common.sh  docker-compose-dev.ps1  docker-compose-dev.sh  docker-cutover.ps1  docker-cutover.sh  docker-seed-volumes.ps1  docker-seed-volumes.sh  docker-smoke.ps1  docker-smoke.sh  docker-soak-check.ps1  docker-soak-check.sh  docker-volume-backup.ps1  docker-volume-backup.sh  fandango_api_drift_check.py  restart-dashboard.ps1  restart-dashboard.sh  run_vps_cmd.py  seed-d1-config.sh  smoke.ps1  smoke.sh  vps-deploy.sh  vps-first-time.sh  vps-preflight.sh  vps-pull-and-restart.sh  vps-sync-secrets.ps1  vps-sync-secrets.sh  vps-verify-neighbors.sh
tests/: test_agent_fallback.py  test_agent_fallback_golden.py  test_cli.py  test_cloudflare_config.py  test_config.py  test_config_example.py  test_config_merge.py  test_dashboard.py  test_detect.py  test_direct_api_detect.py  test_docker_assets.py  test_env_example.py  test_fandango_api.py  test_healthz.py  test_login.py  test_loop.py  test_models.py  test_notify.py  test_playwright_video.py  test_purchase.py  test_purchaser.py  test_purchaser_rescue.py  test_reference_pages.py  test_release_intel.py  test_rescue_calibration.py  (+4 more)
(+68 files in other folders)
